Camlp5 Version 6.18:
--------------------

* [25 May 17] Improved grammar parsing: now able to treat
     expr: [ [ ... list of tokens ...; e = expr1 -> e | e = expr2 -> e ] ];
     expr1: [ [ "bar" -> 42 ] ];
     expr2: [ [ ... same list of tokens ...; "any" -> 69 ] ];
  when input is "... list of tokens ... any" (before was syntax error,
  expr1 expected).
* [28 Apr 17] Updated for ocaml 4.04.2 which was missing.
* [07 Apr 17] Updated for ocaml trunk 4.06.0
* [19 Feb 17] Fixed bug: locations of all identifiers were missing
  resulting of error messages giving "<none>" as source file name
  and no line and column number in the source.
* [04 Jan 17] Updated for ocaml trunk 4.05.0
* [09 Dec 16] Fixed bug: was not compatible with ocaml compiled with
  option -safe-string.
* [09 Dec 16] Fixed bug: make uninstall did not take DESTDIR into account.
* [07 Dec 16] Fixed bug virtual methods in signatures generated syntax
  tree of virtual val. Bug notified by Kakadu.
  Ex: "class foo : object method virtual bar : bool end"
* [07 Dec 16] Fixed bug not separated idents were not allowed in
  'let open' constructs. Bug notified by Kakadu.
  Ex: "let open Mod1.Mod2.Mod3 in ..."
* [06 Dec 16] Fixed bug dumping module definitions with constraints.
  Bug notified by Kakadu.
  Ex:
    module type Item = sig type t end
    module type Sig = sig type t module Node : Item end
    module Make (S : Sig) : Sig with module Node = S.Node and type t = S.t
* [06 Dec 16] Fixed bug extra option word during pr_dump for optional args.
  Bug notified by Kakadu.
  Ex: "class t : ?name:string -> object end"
* [05 Dec 16] Fixed bug dumping of open object types. Bug notified by Kakadu.
  Ex: "type t = <f:int; .. >"
* [05 Dec 16] Fixed bug dump parsetree without throughing away module type
  annotation. Bug notified by Kakadu.
  Ex: "module rec A : sig end = struct end"

Camlp5 Version 6.17:
--------------------

* [09 Sep 16] Added pretty print of type [< ... ] when ended with "> `ident".